--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   datasource:
     username: root
     password: Xinan@0215
-    url: jdbc:mysql://127.0.0.1:3306/learn
+    url: jdbc:mysql://127.0.0.1:3306/new_schema
     driver-class-name: com.mysql.cj.jdbc.Driver
 
