--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/new_schema
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+
+# resources/application.yml
+# resources/application.properties
+# 本文件用于配置项目的一些基本信息，如项目名称、版本、描述等
